k8s/friday-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: friday-ui
  namespace: friday-ui
spec:
  selector:
    app: friday-ui
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
    - name: websocket
      port: 8081
      targetPort: 8081
      protocol: TCP
  type: LoadBalancer
